# projectdavid-core

./: .bandit.yml  .dockerignore  .env.migrations  .gitignore  .pre-commit-config.yaml  .releaserc.json  CHANGELOG.md  COMPATIBILITY.md  MANIFEST.in  README.md  SECURITY.md  api_reqs_hashed.txt  api_requirements.in  api_unhashed_reqs.txt  docker-compose.dev.example.yml  docker-compose.training.yml  env.example  mypy.ini  openapi.json  payload.json  projectdavid-1.97.0-py3-none-any.whl  pyproject.toml  sandbox_reqs_unhashed.txt  training_reqs_hashed.txt  training_reqs_unhashed.txt  training_requirements.in
.github/workflows/: ci.yml
docker/api/: Dockerfile  init_and_run_api.sh  supervisord.conf
docker/inference/: Dockerfile  entrypoint.sh
docker/nginx/: nginx.conf
docker/otel/: otel-config.yaml
docker/router/: Dockerfile
docker/sandbox/: Dockerfile  computer_shell_netfilter.conf  supervisord.conf
docker/searxng/: settings.yml
docker/training/: Dockerfile  entrypoint.sh  unsloth_train.py
docs/: Fine-Tuning-Guide.md  Migration-Chain.md  Sovereign_Forge.md  fine-tuning-handover.md  fine-tuning-handover2.md  fine-tuning-handover3.md  fine-tuning-handover4.md  fine-tuning-handover5.md  fine-tuning-pipeline  fine-tuning.md  vllm-model-registration.md
logs/: sucess.txt
migrations/: env.py
migrations/utils/: safe_ddl.py
migrations/versions/: 005820173bc4_add_fine_tuning_tables.py  02ce09f95a67_add_fine_tuning_tables.py  02e27dca8262_add_max_tokens_to_assistants_table.py  05cf57b50101_updated_at_column_to_match_other_models.py  0f2bbee38b41_add_platform_tools_tool_resources.py  1c9784351972_add_owner_id_to_thread_table.py  1e55188b6b26_add_owner_id_to_assistants.py  26a927cbe516_remove_thread_vector_store_relationship.py  33111f6ac0b8_add_file_id_to_datasets_make_storage_.py  3a42e4f129e4_remove_assistant_vector_store_.py  3e16915ae60f_add_soft_delete_to_files.py  53ed443a77c1_move_fine_tuning_tables_to_training_.py  6413efed1b18_add_decision_telemetry_to_assistants_.py  66b1d150d350_remove_training_data_from_models_py.py  741d86dd5ac8_add_decision_telemetry_to_actions.py  75a8f1e1f907_add_mm_processor_kwargs_to_inference_.py  81522f7beef3_add_cluster_management_tables_and_fields.py  9314d4058f78_add_agentic_state_columns_to_assistant_.py  a1b2c3d4e5f6_add_vllm_hyperparam_columns_to_inference_deployments.py  a4d6ae115898_adding_updated_at_and_deleted_at_to_the_.py  ac1498a9642c_remove_tools_table_and_associations.py  b50938f6bd99_add_batfishsnapshot_to_models.py  ba35b4620058_add_soft_delete_to_vectorstore.py  c6d0aaad984f_implement_fine_tuning_tables_in_training_models.py  d98d34517e5f_add_training_data_to_training_models2.py  db67202be996_baseline.py  dc84d53c3c46_restore_missing_columns.py  dda6fd28f45c_add_audit_logs_table_and_assistant_soft_.py  e844e0ceaba2_baseline_schema.py  f893ede7b752_add_cancelled_at_to_training_jobs.py  ffbf9622eece_convert_timestamps_to_epoch_time.py
rust/delta_normalizer/: Cargo.toml  pyproject.toml
rust/delta_normalizer/src/: lib.rs
rust/fc_parser/: Cargo.toml  pyproject.toml
rust/fc_parser/src/: lib.rs
rust/request_router/: Cargo.toml
rust/request_router/src/: main.rs
scripts/: check-pulls.ps1  compatibility_matrix.py  docker-insights.ps1  docker_alembic_command.md  extract_routes.py  generate_schema.py  hugging_face.py  ollama_commands.md  requirements.ps  seed_model_catalog.py  stack_insights.py
scripts/model_intake/: model_manifest.json
tests/: conftest.py
tests/integration/: .tests.env  DEEP_SEARCH_TEST_PROMPTS.md  _activate_base_model.py  _deactivate_base_model.py  _get_activated_modelsl.py  activate_model.py  activation_smoke_test.py  assistant_intrusion_test.py  compliance_runner.py  create_assistant.py  create_assistant_with_platform_tools.py  create_dataset.py  create_user.py  david_platform_create_assistant.py  david_platform_create_user.py  david_platform_create_user_api_key.py  deactivate_model.py  delete_assistant.py  engineer_ingestion.py  files_intrusion_test.py  fine-tuned-model-pd-orchestrated.py  fine-tuned-model-unorchestrated.py  fine_tuned_model_interaction.py  fine_tuned_model_smoke_test.py  fine_tuning_list_models.py  fine_tuning_pipe.py  join_computer_room.py  (+41 more)
(+159 files in other folders)
