[build-system]
requires = ["maturin>=1.0,<2.0"]
build-backend = "maturin"

[project]
name = "delta_normalizer_rs"
version = "0.1.0"
requires-python = ">=3.10"
description = "Rust-accelerated delta normalizer for the Project David inference pipeline"

[tool.maturin]
features = ["pyo3/extension-module"]
