[package]
name = "fc_parser"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[lib]
name = "fc_parser"
crate-type = ["cdylib"]

[dependencies]
pyo3 = { version = "0.28", features = ["extension-module"] }
regex = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
once_cell = "1"
uuid = { version = "1", features = ["v4"] }
