[package]
name = "pd_router"
version = "0.1.0"
edition = "2021"
description = "Project David — Rust request router for SSE inference streaming"
authors = ["Francis Neequaye Armah <engineering@projectdavid.co.uk>"]

[[bin]]
name = "pd_router"
path = "src/main.rs"

[dependencies]
axum = "0.7"
tokio = { version = "1", features = ["full"] }
reqwest = { version = "0.12", features = ["stream"] }
bytes = "1"
futures-util = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
tower = "0.4"
tower-http = { version = "0.5", features = ["trace", "cors"] }

[profile.release]
opt-level = 3
lto = true
codegen-units = 1
strip = true
